SERVER-81028 Fix $listCatalog behavior during concurrent collection renames