src/mongo/db/pipeline/process_interface/common_mongod_process_interface.h
@@ -101,7 +101,8 @@ public:
     std::deque<BSONObj> listCatalog(OperationContext* opCtx) const final;
 
     boost::optional<BSONObj> getCatalogEntry(OperationContext* opCtx,
-                                             const NamespaceString& ns) const final;
+                                             const NamespaceString& ns,
+                                             const boost::optional<UUID>& collUUID) const final;
 
     void appendLatencyStats(OperationContext* opCtx,
                             const NamespaceString& nss,
