src/mongo/db/pipeline/process_interface/mongos_process_interface.h
@@ -163,7 +163,8 @@ public:
     }
 
     boost::optional<BSONObj> getCatalogEntry(OperationContext* opCtx,
-                                             const NamespaceString& ns) const final {
+                                             const NamespaceString& ns,
+                                             const boost::optional<UUID>& collUUID) const final {
         MONGO_UNREACHABLE;
     }
 
