src/mongo/db/pipeline/process_interface/stub_mongo_process_interface.h
@@ -137,7 +137,8 @@ public:
     }
 
     boost::optional<BSONObj> getCatalogEntry(OperationContext* opCtx,
-                                             const NamespaceString& ns) const override {
+                                             const NamespaceString& ns,
+                                             const boost::optional<UUID>& collUUID) const override {
         MONGO_UNREACHABLE;
     }
 
